<resources>
    <string name="app_name">Youtube Search Client</string>

    <!-- Strings for video size -->
    <string name="pref_size_key" translatable="false">pref_size</string>
    <string name="pref_size_title">Video Size</string>
    <string name="pref_size_entry_small">Small</string>
    <string name="pref_size_value_small" translatable="false">small</string>
    <string name="pref_size_entry_medium">Medium</string>
    <string name="pref_size_value_medium" translatable="false">medium</string>
    <string name="pref_size_entry_large">Large</string>
    <string name="pref_size_value_large" translatable="false">large</string>
    <string name="pref_size_default">@string/pref_size_value_medium</string>

    <!-- Strings for show videos -->
    <string name="pref_show_key" translatable="false">pref_show</string>
    <string name="pref_show_title">Show Videos</string>
    <string name="pref_show_entry_trending">Trending</string>
    <string name="pref_show_value_trending" translatable="false">trending</string>
    <string name="pref_show_entry_custom">Searched</string>
    <string name="pref_show_value_custom" translatable="false">searched</string>
    <string name="pref_show_default">@string/pref_show_value_trending</string>

    <!-- Strings for user preference -->
    <string name="pref_user_key" translatable="false">pref_user</string>
    <string name="pref_user_title">Youtube Username</string>

    <!-- Strings for user preference -->
    <string name="pref_theme_key" translatable="false">pref_theme</string>
    <string name="pref_theme_title">Dark Theme</string>
    <string name="pref_theme_default">false</string>

    <string name="pref_search_key" translatable="false">pref_search</string>
    <string name="pref_search_title">Search</string>
    <string name="pref_search_default">Oregon State University</string>

    <string name="loading_error_message">We were unable to run your search.  Please check your internet connectivity and try again.</string>

</resources>
