<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="pref_search_category"
        android:title="Search">

        <EditTextPreference
            android:key="@string/pref_search_key"
            android:title="@string/pref_search_title"
            android:defaultValue="@string/pref_search_default"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="prefs_category"
        android:title="Preferences">

        <SwitchPreferenceCompat
            android:key="@string/pref_theme_key"
            android:title="@string/pref_theme_title"
            android:id="@+id/theme_switch"/>
<!--            android:summaryOff="off"-->
<!--            android:summaryOn="on" />-->

        <ListPreference
            android:key="@string/pref_size_key"
            android:title="@string/pref_size_title"
            android:summary="%s"
            android:dialogTitle="@string/pref_size_title"
            android:entries="@array/pref_size_entries"
            android:entryValues="@array/pref_size_values"
            android:defaultValue="@string/pref_size_default"/>

        <ListPreference
            android:key="@string/pref_show_key"
            android:title="@string/pref_show_title"
            android:summary="%s"
            android:dialogTitle="@string/pref_show_title"
            android:entries="@array/pref_show_entries"
            android:entryValues="@array/pref_show_values"
            android:defaultValue="@string/pref_show_default"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_account_category"
        android:title="Account">

        <EditTextPreference
            android:key="@string/pref_user_key"
            android:title="@string/pref_user_title" />
    </PreferenceCategory>
</PreferenceScreen>